--- a/apps/money-tracker-ui/src/app/expenses/in-out-list/in-out-list.component.sass
+++ b/apps/money-tracker-ui/src/app/expenses/in-out-list/in-out-list.component.sass
@@ -1,10 +1,14 @@
 .totalsHeader
   float: right
   padding-top: 20px
+  position: relative
+
+.totalsHeaderHandset
+  padding-top: 20px
+  position: relative
 
 .reselling-chart
   position: relative
-  height: 240vh
-  overflow: hidden
+  height: 80vh
 
 
