--- a/apps/money-tracker-ui/src/app/workspace/workspace.component.html
+++ b/apps/money-tracker-ui/src/app/workspace/workspace.component.html
@@ -1,4 +1,4 @@
-<div style="padding-right: 30px; padding-left: 30px; padding-bottom: 10px">
+<div class="workspace">
   <router-outlet></router-outlet>
 </div>
 
