--- a/apps/money-tracker-ui/src/styles.sass
+++ b/apps/money-tracker-ui/src/styles.sass
@@ -4,3 +4,20 @@
 
 .mat-menu-panel
   max-width: unset !important
+
+
+
+.rubber
+  box-shadow: 0 0 0 3px blue, 0 0 0 2px #eaf5ec inset
+  border: 2px solid transparent
+  border-radius: 4px
+  padding: 5px 2px
+  line-height: 22px
+  color: blue
+  font-size: 24px
+  font-family: 'Black Ops One', cursive
+  text-transform: uppercase
+  text-align: center
+  opacity: 0.4
+  width: auto
+  transform: rotate(-5deg)
