--- a/apps/money-tracker-ui/src/app/expenses/balance/balance.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/balance/balance.component.html
@@ -17,7 +17,7 @@
   </div>
   <mat-paginator [length]="total"
                  [pageSize]="limit"
-                 [pageSizeOptions]="[12, 24, 36, 48, 120, 240]"
+                 [pageSizeOptions]="[12, 24, 36, 42, 48, 54, 60, 72, 78, 84, 90, 102, 108, 120, 240, 360]"
                  [pageIndex]="n"
                  (page)="setCurrentPage($event.pageIndex, $event.pageSize)"
                  aria-label="Select page"
