--- a/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
@@ -1,20 +1,20 @@
 <div *ngIf="isLoggedIn">
 
-  <h4 *ngIf="this.report" class="header" [hidden]="this.loading || this.pageLoading">
+  <h4 *ngIf="this.report" class="header" [hidden]="pageLoading">
     <span><b>Sold:</b> {{(this.report.sourceAmount ? this.report.sourceAmount : 0) | currency:this.sourceCurrency}}, </span>
     <span><b>Bought:</b> {{(this.report.destAmount ? this.report.destAmount : 0) | currency:this.destCurrency}}, </span>
     <span><b>Average:</b> {{(this.report.avgRate ? this.report.avgRate : 0) | number: '1.6-8'}} , </span>
     <span><b>Current:</b> {{this.report.curRate | number: '1.6-8'}} </span>
   </h4>
 
-  <h4 *ngIf="this.report" class="header" [hidden]="!(this.loading || this.pageLoading)">
+  <h4 *ngIf="this.report" class="header" [hidden]="!(pageLoading)">
     <span><b>Loading...</b></span>
   </h4>
 
-  <div>
+  <div *ngIf="this.report" [hidden]="pageLoading">
     <mat-form-field appearance="fill">
       <mat-label>Available source currencies</mat-label>
-      <mat-select [disabled]="this.loading || this.pageLoading" [value]="sourceCurrency" (valueChange)="updatesSourceCurrency($event)">
+      <mat-select [disabled]="loading" [value]="sourceCurrency" (valueChange)="updatesSourceCurrency($event)">
         <mat-option *ngFor="let currency of getSourceCurrencies() | keyvalue" [value]="currency.value">
           {{currency.value}}
         </mat-option>
@@ -27,20 +27,17 @@
 
     <mat-form-field appearance="fill">
       <mat-label>Available destination currencies</mat-label>
-      <mat-select [disabled]="this.loading || this.pageLoading" [value]="destCurrency" (valueChange)="updatesDestCurrency($event)">
+      <mat-select [disabled]="loading" [value]="destCurrency" (valueChange)="updatesDestCurrency($event)">
         <mat-option *ngFor="let currency of getDestCurrencies() | keyvalue" [value]="currency.value">
           {{currency.value}}
         </mat-option>
       </mat-select>
     </mat-form-field>
 
-    <div class="rubber timeHeader" *ngIf="this.report" [hidden]="this.loading || this.pageLoading">
+    <div class="rubber timeHeader" *ngIf="this.report && this.report.delta">
       {{this.report.delta | currency: this.sourceCurrency}}
     </div>
 
-    <div class="rubber timeHeader" [hidden]="!(this.loading || this.pageLoading)">
-      Loading...
-    </div>
   </div>
 
   <ng-template #exchangeTable let-entities="entities">
