--- a/apps/money-tracker-ui/src/app/expenses/expences-list/expenses-list.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/expences-list/expenses-list.component.html
@@ -4,9 +4,27 @@
     <input matInput
            id="name"
            (blur)="setNameFilter($event)"
-           [value]="getNameFilter()"
-           placeholder="Filter by commodity"
-           #input>
+           [value]="name"
+           placeholder="Filter by commodity">
+    <mat-hint>Starts with...</mat-hint>
+  </mat-form-field>
+  <mat-form-field appearance="fill" class="example-form-field">
+    <mat-label>Enter a date range</mat-label>
+    <mat-date-range-input [rangePicker]="$any(rangePicker)"
+      [comparisonStart]="getStartDate()"
+      [comparisonEnd]="getEndDate()"
+    >
+      <input matStartDate placeholder="Start date" (dateChange)="setStartDate($event)" [value]="startDate.value">
+      <input matEndDate placeholder="End date" (dateChange)="setEndDate($event)" [value]="endDate.value">
+    </mat-date-range-input>
+    <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+    <mat-datepicker-toggle matIconSuffix [for]="rangePicker"></mat-datepicker-toggle>
+    <mat-date-range-picker #rangePicker>
+      <mat-date-range-picker-actions>
+        <button mat-button matDateRangePickerCancel>Cancel</button>
+        <button mat-raised-button color="primary" matDateRangePickerApply>Apply</button>
+      </mat-date-range-picker-actions>
+    </mat-date-range-picker>
   </mat-form-field>
 </ng-template>
 
