--- a/libs/shared-components/src/lib/components/entity-list/entity-list.component.sass
+++ b/libs/shared-components/src/lib/components/entity-list/entity-list.component.sass
@@ -20,6 +20,18 @@
   margin: 10px 15px
   padding: 10px
 
+.filter
+  width: 100%
+
+.filterButtons
+  float: right
+  padding-top: 10px
+
+.filterButton
+  padding-left: 5px
+  padding-top: 10px
+  padding-bottom: 10px
+
 .processing-indicator
   @apply flex flex-col justify-center p-12 items-center
   position: absolute
