--- a/apps/money-tracker-ui/src/app/expenses/expences-list/expenses-list.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/expences-list/expenses-list.component.html
@@ -1,7 +1,8 @@
 <ng-template #filter>
   <mat-form-field>
     <mat-label>Name</mat-label>
-    <input matInput id="name" (blur)="setNameFilter($event)"
+    <input matInput id="name"
+           (change)="setNameFilter($event)"
            [formControl]="name"
            type="text"
            placeholder="Filter by commodity">
