--- a/apps/money-tracker-ui/src/app/workspace/workspace.component.html
+++ b/apps/money-tracker-ui/src/app/workspace/workspace.component.html
@@ -1,3 +1,6 @@
+<mat-progress-bar
+  *ngIf="loading" color="accent" mode="indeterminate">
+</mat-progress-bar>
 <div class="workspace">
   <router-outlet></router-outlet>
 </div>
