--- a/libs/shared-components/src/lib/components/entity-list/entity-list.component.sass
+++ b/libs/shared-components/src/lib/components/entity-list/entity-list.component.sass
@@ -28,9 +28,7 @@
   padding-top: 10px
 
 .filterButton
-  padding-left: 5px
-  padding-top: 10px
-  padding-bottom: 10px
+  padding: 0
 
 .processing-indicator
   @apply flex flex-col justify-center p-12 items-center
