[+] Added search by name for the last commodities view

--- a/apps/money-tracker-ui/src/app/expenses/last-commodities-list/last-commodities-list.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/last-commodities-list/last-commodities-list.component.html
@@ -51,4 +51,7 @@
     </table>
 </ng-template>
 
-<app-entity-list [resultItemTemplate]="lastExpensesTable" [table]="true"></app-entity-list>
+<app-search
+  [resultItemTemplate]="lastExpensesTable" 
+  [table]="true">
+</app-search>
