[+] Refactored basic entity list component

--- a/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
@@ -97,8 +97,10 @@
 
   <app-entity-list [resultItemTemplate]="exchangeTable"
                    [table]="true"
-                   [queryArguments]="getQueryArguments()"
-                   [queryName]="getQueryName()"
+                   [searchRequest]="{
+                        queryArguments: getQueryArguments(),
+                        queryName: 'events'
+                    }"
                    [sort]="getSort()"
                    (loading$)="setLoading($event)"
   ></app-entity-list>
