--- a/apps/money-tracker-ui/src/app/commodities/commodity-group/commodity-group.component.html
+++ b/apps/money-tracker-ui/src/app/commodities/commodity-group/commodity-group.component.html
@@ -16,10 +16,13 @@
   </div>
 
   <app-entity-list
-    [queryArguments]="getQueryArguments()"
-    [queryName]="'recursiveWithCommoditiesByParentId'"
+    [searchRequest]="{
+        queryArguments: getQueryArguments(),
+        queryName: 'recursiveWithCommoditiesByParentId'
+    }"
     (loading$)="setLoading($event)"
     (entities$)="setEntities($event)"
+    [sort]="getSort()"
   ></app-entity-list>
 
 
