--- a/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
@@ -66,8 +66,10 @@
 <app-entity-list
   [resultItemTemplate]="expensesTable"
   [table]="true"
-  [queryArguments]="getQueryArguments()"
-  [queryName]="'tradeplace'"
+  [searchRequest]="{
+      queryArguments: getQueryArguments(),
+      queryName: 'tradeplace'
+  }"
   (loading$)="setLoading($event)"
   (entities$)="setEntities($event)"
 ></app-entity-list>
