[+] Bug fixes in all the list related components

--- a/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
@@ -21,9 +21,9 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-button-toggle (change)="swapCurrencies()">
+    <button mat-icon-button (click)="swapCurrencies()">
       <mat-icon>swap_horiz</mat-icon>
-    </mat-button-toggle>
+    </button>
 
     <mat-form-field appearance="fill">
       <mat-label>Available destination currencies</mat-label>
