--- a/apps/money-tracker-ui/src/app/organizations/organization-group/organization-group.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organization-group/organization-group.component.html
@@ -12,17 +12,21 @@
     </div>
   </div>
 
-  <div *ngIf="childGroups.length > 0" class='col-4'>
-    <div *ngFor="let a of childGroups">
-      <app-entity-element [entity]="a"></app-entity-element>
-    </div>
-  </div>
+  <app-entity-list
+    [searchRequest]="{
+        queryArguments: getQueryArguments(),
+        queryName: 'recursiveByParentId'
+    }"
+    (loading$)="setLoading($event)"
+    (entities$)="setEntities($event)"
+    [sort]="getSort()"
+  ></app-entity-list>
 
-  <div *ngIf="childOrganizations.length > 0" class='col-4'>
-    <div *ngFor="let a of childOrganizations">
-      <app-entity-element [entity]="a"></app-entity-element>
-    </div>
-  </div>
+  <app-organization-group-organizations
+    *ngIf="!(children && children.length > 0)"
+    [id]="id"
+  >
+  </app-organization-group-organizations>
 
   <div>
     <ya-map [center]="[55.751952, 37.600739]" [zoom]="12">
