[+] Fixed expenses list filter

--- a/apps/money-tracker-ui/src/app/expenses/expences-list/expenses-list.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/expences-list/expenses-list.component.html
@@ -72,6 +72,10 @@
 
 <app-entity-list [resultItemTemplate]="expensesTable"
                  [table]="true"
+                 [searchRequest]="{
+                        queryArguments: {},
+                        queryName: getQueryName()
+                    }"
                  [sort]="getSort()"
                  [filterTemplate]="filter"
                  (filter$)="setFilter($event)"
